--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       opacity: 0.3;
       }
       .main-block {
-      max-width: 340px; 
-      min-height: 460px; 
+      max-width: auto; 
+      min-height: auto; 
       padding: 10px 0;
       margin: auto;
       border-radius: 5px; 
