Revert "Update index.html"
This reverts commit 15526ecfbb6ef8710c5574f7a20cac1415c86d0f.

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       opacity: 0.3;
       }
       .main-block {
-      max-width: auto; 
-      min-height: auto; 
+      max-width: 340px; 
+      min-height: 460px; 
       padding: 10px 0;
       margin: auto;
       border-radius: 5px; 
