--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@
 	let submit = () => {
 		let myTab = document.getElementById('empTable');
 		let arrValues = new Array();
+		let output_string;
 		let idy_total = 0;
 		let sunny_total = 0;
 		let susan_total = 0;
@@ -289,19 +290,25 @@
 			buyer = ""
 			price = 0
 		}
+		output_string = "<hr><h3>" + "Before Points Discount" + "</h3>";
+		output_string = output_string + "<table><tr><td>" + "Idy Total:" + "</td><td>$"+ roundTo(idy_total,2) + "</td></tr>";
+		output_string = output_string + "<tr><td>" + "Sunny Total:" + "</td><td>$" + roundTo(sunny_total,2) + "</td></tr>";
+		output_string = output_string + "<tr><td>" + "Susan Total:" + "</td><td>$" + roundTo(susan_total,2) + "</td></tr>";
+		output_string = output_string + "<tr><td>" + "Patty Total:" + "</td><td>$" + roundTo(patty_total,2) + "</td></tr>";
+		output_string = output_string + "<tr><td>" + "Other Total:" + "</td><td>$" + roundTo(other_total,2) + "</td></tr></table>";
 		idy_total = roundTo(idy_total * 1.13 - idy_total * 15 * 20 / 1000,2)
 		sunny_total = roundTo(sunny_total * 1.13 - sunny_total * 15 * 20 / 1000,2)
 		susan_total = roundTo(susan_total * 1.13 - susan_total * 15 * 20 / 1000,2)
 		patty_total = roundTo(patty_total * 1.13 - patty_total * 15 * 20 / 1000,2)
 		other_total = roundTo(other_total * 1.13 - other_total * 15 * 20 / 1000,2)
-		
-		arrValues.push("'" + "Idy Total:" + idy_total + "'");
-		arrValues.push("'" + "Sunny Total:" + sunny_total + "'");
-		arrValues.push("'" + "Susan Total:" + susan_total + "'");
-		arrValues.push("'" + "Patty Total:" + patty_total + "'");
-		arrValues.push("'" + "Other Total:" + other_total + "'");
+		output_string = output_string + "<hr><h3>" + "After Points Discount" + "</h3>";
+		output_string = output_string + "<table><tr><td>" + "Idy Total:" + "</td><td>$"+ idy_total + "</td></tr>";
+		output_string = output_string + "<tr><td>" + "Sunny Total:" + "</td><td>$"+ sunny_total + "</td></tr>";
+		output_string = output_string + "<tr><td>" + "Susan Total:" + "</td><td>$"+ susan_total + "</td></tr>";
+		output_string = output_string + "<tr><td>" + "Patty Total:" + "</td><td>$"+ patty_total + "</td></tr>";
+		output_string = output_string + "<tr><td>" + "Other Total:" + "</td><td>$"+ other_total + "</td></tr></table>";
 		// The final output.
-		document.getElementById('output').innerHTML = arrValues;
+		document.getElementById('output').innerHTML = output_string;
 		//console.log (arrValues);   // you can see the array values in your browsers console window. Thanks :-) 
 	}
 	function roundTo(n, digits) {
