--- a/beta.html
+++ b/beta.html
@@ -13,7 +13,10 @@
 	<!-- Bootstrap Icons CSS file <link rel="stylesheet" href="./icon.css">-->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
 	<style>
-		.custom-width {
+		.custom-width-30 {
+			width: 30%;
+		}
+		.custom-width-100 {
 			width: 100%;
 		}
 	 </style>
@@ -52,7 +55,7 @@
               <th scope="col"></th>
               <th scope="col">Item</th>
               <th scope="col">Price</th>
-              <th scope="col">Buyer</th>
+              <th scope="col" class="custom-width-30">Buyer</th>
             </tr>
           </thead>
           <tbody>
@@ -94,7 +97,7 @@
 	  removeCell.innerHTML = "<button type='button' class='btn btn-danger' onclick='removeRow(this)'><i class='bi bi-trash'></i></button>"
 	  itemCell.innerHTML = "<input type='text' class='form-control'>";
 	  priceCell.innerHTML = "<input type='number' class='form-control' step='0.01' min='0'>";
-	  buyerCell.innerHTML = "<select class='form-control custom-width' id='buyer'><option selected disabled>Select buyer</option><option>Idy</option><option>Susan</option><option>Sunny</option><option>Patty</option><option>Other</option></select>";
+	  buyerCell.innerHTML = "<select class='form-control' id='buyer'><option selected disabled>Select buyer</option><option>Idy</option><option>Susan</option><option>Sunny</option><option>Patty</option><option>Other</option></select>";
 	}
 
 	// now, add a new row to the TABLE.
