--- a/index.html
+++ b/index.html
@@ -390,6 +390,7 @@
 			Click the "Add New Row" button to add a new row to the table. <br> Enter values in each row and press the "Calculate" button.
 		  </p>
 		<a href="./beta.html">New Version (Workin in Progress)</a>
+	    	<a href="./amazon_review_tracker.html">Amazon Review Tracker</a>
 		<p>
 		<input class="account-type" type="button" id="addRow" value="Add New Row" onclick="addRow()" />
 		</p>
